# Design-Patterns

./: CMakeLists.txt
1.Singleton/: CMakeLists.txt  Main.cpp  ResourceHolder.cpp  ResourceHolder.hpp
Creational/1.Singleton/: CMakeLists.txt  Main.cpp  ResourceHolder.cpp  ResourceHolder.hpp
Creational/1.Singleton/Singleton/: ResourceDB.cpp  ResourceDB.hpp
Creational/2.Prototype/: Archer.cpp  Archer.hpp  CMakeLists.txt  Horseman.cpp  Horseman.hpp  Infantryman.cpp  Infantryman.hpp  Main.cpp  Warrior.hpp  WarriorsFactory.cpp  WarriorsFactory.hpp
Creational/2.Prototype/Prototype/: Color.cpp  Color.hpp
Creational/3.Factory_Method/: CMakeLists.txt  Main.cpp
Creational/4.Abstract_Factory/: CMakeLists.txt  Main.cpp
Creational/4.Abstract_Factory/Factories/: GUIFactory.cpp  GUIFactory.hpp  LinuxGUIFactory.cpp  LinuxGUIFactory.hpp  WindowsGUIFactory.cpp  WindowsGUIFactory.hpp
Creational/4.Abstract_Factory/Objects/: LinuxButton.cpp  LinuxButton.hpp  WindowsButton.cpp  WindowsButton.hpp
Creational/5.Builder/: CMakeLists.txt  Main.cpp
Creational/5.Builder/Builders/: Builder.cpp  Builder.hpp  FairBuilder.cpp  FairBuilder.hpp  UnfairBuilder.cpp  UnfairBuilder.hpp
Creational/5.Builder/Directors/: Director.cpp  Director.hpp
Creational/5.Builder/Objects/: Object.hpp
